--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/cli": "^3.3.5",
     "@types/date-fns": "^2.5.3",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20.17.30",
