--- a/.github/workflows/wicdifine-frontend-build.yaml
+++ b/.github/workflows/wicdifine-frontend-build.yaml
@@ -1,8 +1,6 @@
 # To better understand this file read this:
 # https://docs.ionos.space/docs/github-actions-customization/
-
 name: "Deploy Now: Execute Build"
-
 on:
   workflow_call:
     inputs:
@@ -12,10 +10,8 @@ on:
       branch-id:
         required: true
         type: string
-
 env:
   DEPLOYMENT_FOLDER: .next
-
 jobs:
 # Please do not rename this job
   build-project:
@@ -26,12 +22,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: v18
-
       - name: Build Node assets
         env:
           CI: true
@@ -41,14 +35,15 @@ jobs:
           PYTHON_BACKEND_URL: http://localhost:8082
           SITE_URL: ${{ inputs.site-url }}
         run: npm install && npm run build:css
-
       - name: Run script
-# uncomment the following lines if you want to add environment variables for this step
-#        env:
-#          MY_ENV_VAR: value-for-my-env-var
-#          MY_SECRET_ENV_VAR: ${{ secrets.MY_SECRET }} # here you can find information how to create secrets: https://docs.github.com/en/actions/security-guides/encrypted-secrets
-        run: npx next build
-
+        env:
+          CI: true
+          NEXT_PUBLIC_API_URL: http://localhost:8082
+          NEXT_PUBLIC_APP_NAME: WICFIN
+          NODE_ENV: production
+          PYTHON_BACKEND_URL: http://localhost:8082
+          SITE_URL: ${{ inputs.site-url }}
+        run: npm run build
 # Please do not touch the following action
       - name: Store deployment content
         uses: ionos-deploy-now/artifact-action@v1
