--- a/.github/workflows/wicdifine-frontend-build.yaml
+++ b/.github/workflows/wicdifine-frontend-build.yaml
@@ -1,5 +1,3 @@
-# To better understand this file read this:
-# https://docs.ionos.space/docs/github-actions-customization/
 name: "Deploy Now: Execute Build"
 on:
   workflow_call:
@@ -13,7 +11,6 @@ on:
 env:
   DEPLOYMENT_FOLDER: .next
 jobs:
-# Please do not rename this job
   build-project:
     name: build wicdifine-frontend
     runs-on: ubuntu-latest
@@ -34,17 +31,7 @@ jobs:
           NODE_ENV: production
           PYTHON_BACKEND_URL: http://localhost:8082
           SITE_URL: ${{ inputs.site-url }}
-        run: npm install && npm run build:css
-      - name: Run script
-        env:
-          CI: true
-          NEXT_PUBLIC_API_URL: http://localhost:8082
-          NEXT_PUBLIC_APP_NAME: WICFIN
-          NODE_ENV: production
-          PYTHON_BACKEND_URL: http://localhost:8082
-          SITE_URL: ${{ inputs.site-url }}
-        run: npm run build
-# Please do not touch the following action
+        run: npm install && npm run build
       - name: Store deployment content
         uses: ionos-deploy-now/artifact-action@v1
         with:
