Simplify build process with prebuild hook

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
     "dev:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
-    "clean": "if exist .next rd /s /q .next",
-    "dev": "npm run clean && next dev -p 3002",
-    "build": "npx next build",
+    "clean": "rm -rf .next",
+    "prebuild": "npm run build:css",
+    "build": "next build",
+    "dev": "next dev -p 3002",
     "start": "next start -p ${PORT:-3002}",
     "lint": "next lint"
   },
