--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "commonjs",
   "private": true,
   "scripts": {
-  "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
-  "dev:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
-  "clean": "rm -rf .next",
-  "dev": "next dev -p 3002",
-  "build": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify && npx next build",
-  "start": "next start -p ${PORT:-3002}",
-  "lint": "next lint"
-},
+    "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
+    "dev:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
+    "clean": "rm -rf .next || rmdir /s .next",
+    "dev": "next dev -p 3002",
+    "build": "npm run clean && npm run build:css && cross-env NEXT_PUBLIC_API_URL=http://localhost:8082 npx next build",
+    "start": "next start -p ${PORT:-3002}",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
@@ -81,6 +81,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
