--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "type": "commonjs",
   "private": true,
   "scripts": {
-    "build:css": "tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
-    "dev:css": "tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
+    "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
+    "dev:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
     "clean": "rm -rf .next || rmdir /s .next",
     "dev": "npm run clean && next dev -p 3002",
-    "build": "npm run clean && npm run build:css && cross-env NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL next build",
+    "build": "npm run build:css && npx next build",
     "start": "next start -p ${PORT:-3002}",
     "lint": "next lint"
   },
@@ -71,10 +71,11 @@
     "tailwindcss": "^3.3.5",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
+    "next-themes": "^0.4.6",
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    
+
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/date-fns": "^2.5.3",
@@ -88,7 +89,6 @@
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "next-themes": "^0.4.6",
     "postcss": "^8.4.31",
     "typescript": "^5"
   }
