fix: Remove .next types from tsconfig for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,93 @@
-# Python
-*.py[cod]
+﻿# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+
+# Next.js build output
+.next/
+out/
+
+# Production build
+build/
+dist/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Cache and logs
+.cache/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Database
+*.db
+*.sqlite
+
+# Temporary files
+tmp/
+temp/
+
+# Python cache (for AI service)
 __pycache__/
-**/__pycache__/
-
-# Virtual Environments
-.venv/
-venv/
-/venv/
-/.venv/
-*/venv/
-*/.venv/
-python-ai-service/.venv/
-python-ai-service/venv/
-wicfin-chatbot/venv/
-wicfin-chatbot/.venv/
-
-# Specific large files causing problems
-**/tensorflow/python/_pywrap_tensorflow_internal.pyd
-**/clang/native/libclang.dll
-**/tensorflow/python/_pywrap_tensorflow_internal.lib
-
-# Machine Learning Models
-*.h5
-*.bin
-*.pkl
-*.joblib
-
-# Build/Artifacts
-*.pyd
-*.dll
-*.lib
+*.py[cod]
+*.class
 *.so
+.Python
+env/
+venv/
+.env
+.venv
 
-# Large Data Files
-*.csv
-node_modules
+# Package manager files
+package-lock.json
+yarn.lock
+
+# Build cache
+.cache
+.parcel-cache
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Storybook build outputs
+.out
+.storybook-out
