--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "0.1.0",
   "type": "commonjs",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
+    "dev": "next dev -p 3002",
+    "build": "next build",
+    "start": "next start -p 3002",
+    "lint": "next lint",
+    "clean": "rimraf .next",
     "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --minify",
     "dev:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
-    "clean": "rm -rf .next || rmdir /s .next",
-    "dev": "npm run clean && next dev -p 3002",
-    "build": "npm run build:css && npx next build",
-    "start": "next start -p ${PORT:-3002}",
-    "lint": "next lint"
+    "postinstall": "npm run build:css",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.20",
@@ -33,14 +42,12 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@vercel/blob": "^1.0.0",
     "ai": "^4.3.10",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.6.0",
     "bcrypt-ts": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
-    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "diff-match-patch": "^1.0.5",
     "drizzle-orm": "^0.42.0",
@@ -68,16 +75,18 @@
     "sonner": "^1.7.4",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^3.3.5",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
+    "zod": "^3.24.3",
+    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "next-themes": "^0.4.6",
-    "zod": "^3.24.3"
+    "rimraf": "^5.0.0",
+    "typescript": "^5"
   },
   "devDependencies": {
-
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/date-fns": "^2.5.3",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20.17.30",
@@ -88,8 +97,6 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "postcss": "^8.4.31",
-    "typescript": "^5"
+    "eslint-config-next": "15.3.0"
   }
 }
