--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["node", "next", "next/server"],
     "plugins": [
       {
         "name": "next"
@@ -21,9 +20,15 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/hooks/*": ["./hooks/*"]
+      "@/hooks/*": ["./src/hooks/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.js", "src/libs/ai/providers.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    "next.config.js", 
+    "src/libs/ai/providers.ts"
+  ],
+  "exclude": ["node_modules", ".next", "out", "dist"]
 }
