--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@vercel/blob": "^1.0.0",
     "ai": "^4.3.10",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "bcrypt-ts": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -56,8 +57,10 @@
     "lucide-react": "^0.488.0",
     "next": "^14.2.28",
     "next-auth": "^5.0.0-beta.3",
+    "next-themes": "^0.4.6",
     "openai": "^4.96.0",
     "papaparse": "^5.5.2",
+    "postcss": "^8.4.31",
     "postgres": "^3.4.5",
     "prosemirror-inputrules": "^1.5.0",
     "prosemirror-markdown": "^1.13.2",
@@ -72,18 +75,15 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "rimraf": "^5.0.0",
     "sonner": "^1.7.4",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
-    "zod": "^3.24.3",
-    "tailwindcss": "^3.3.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "next-themes": "^0.4.6",
-    "rimraf": "^5.0.0",
-    "typescript": "^5"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -91,8 +91,8 @@
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20.17.30",
     "@types/papaparse": "^5.3.15",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
