--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@types/node": "^24.0.14",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vercel/blob": "^1.0.0",
     "ai": "^4.3.10",
     "autoprefixer": "^10.4.16",
@@ -80,6 +83,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.3.5",
+    "typescript": "^5.8.3",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
