--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:css": "tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
     "clean": "node -e \"const fs=require('fs');fs.rmSync('.next',{recursive:true,force:true});fs.rmSync('.turbo',{recursive:true,force:true});\"",
     "dev": "npm run clean && next dev -p 3002",
-    "build": "npm run clean && npm run build:css && NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL next build",
+    "build": "npm run clean && npm run build:css && next build",
     "start": "next start -p ${PORT:-3002}",
     "lint": "next lint"
   },
