--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev:css": "tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
     "clean": "node -e \"const fs=require('fs');fs.rmSync('.next',{recursive:true,force:true});fs.rmSync('.turbo',{recursive:true,force:true});\"",
     "dev": "npm run clean && next dev -p 3002",
-    "build": "npm run clean && npm run build:css && next build",
+    "build": "npm run build:css && next build",
     "postbuild": "node -e \"const fs=require('fs');fs.rmSync('.next/cache',{recursive:true,force:true});\"",
-    "start": "next start -p ${PORT:-3002}",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
